feat: menu func except learn mroe

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
               <div id="menu">
                 <ul>
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="index.html">Download Poster</a></li>
-                  <li><a href="index.html">Learn More</a></li>
-                  <li><a href="index.html">Contact Me</a></li>
+                  <li><a href="./assets/draft poster KCACON.pdf" target="_blank">Download Poster</a></li>
+                  <li><a href="" onclick="alert('Under Development')">Learn More</a></li>
+                  <li><a href="mailto:criticalcarpet.dev@gmail.com">Contact Me</a></li>
                 </ul>
               </div>
             </li>
