feat: add pdf visible without download

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
               <div id="menu">
                 <ul>
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="./assets/draft poster KCACON.pdf" target="_blank">Download Poster</a></li>
-                  <li><a href="" onclick="alert('Under Development')">Learn More</a></li>
+                  <li><a href="./poster.html" target="_blank">Download Poster</a></li>
+                  <li><a href="./assets/Natal_Teeth_Project.pdf" target="_blank">Learn More</a></li>
                   <li><a href="mailto:criticalcarpet.dev@gmail.com">Contact Me</a></li>
                 </ul>
               </div>
