feat: fully func non download pdf view

--- a/data.html
+++ b/data.html
@@ -27,7 +27,7 @@
   <body>
     <!-- Poster PDF -->
     <iframe
-      src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://criticalcarpet.github.io/KCACON-2025-natal-teeth/assets/draft%20poster%20KCACON.pdf"
+      src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://criticalcarpet.github.io/KCACON-2025-natal-teeth/assets/Natal_Teeth_Project.pdf"
       allowfullscreen
     ></iframe>
   </body>
