--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
               <a href="#menu" class="menuToggle"><span>Menu</span></a>
               <div id="menu">
                 <ul>
-                  <li><a href="index.html">Home</a></li>
                   <li><a href="./poster.html" target="_blank">Download Poster</a></li>
-                  <li><a href="./assets/Natal_Teeth_Project.pdf" target="_blank">Learn More</a></li>
+                  <li><a href="./data.html" target="_blank">Learn More</a></li>
                   <li><a href="mailto:criticalcarpet.dev@gmail.com">Contact Me</a></li>
                 </ul>
               </div>
